--- a/LiveChat/packages/repositories.config
+++ b/LiveChat/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\LiveChatApp.Tests\packages.config" />
   <repository path="..\LiveChatApp\packages.config" />
+  <repository path="..\LiveChatWebApi.Tests\packages.config" />
+  <repository path="..\LiveChatWebApi\packages.config" />
 </repositories>
