Basic shoutbox with history. #2

--- a/LiveChat/LiveChat.Domain/App.config
+++ b/LiveChat/LiveChat.Domain/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="LiveChatContext" connectionString="metadata=res://*/Models.EntityClasses.LiveChatDataModel.csdl|res://*/Models.EntityClasses.LiveChatDataModel.ssdl|res://*/Models.EntityClasses.LiveChatDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql5.webio.pl,2401;initial catalog=ksmykala1_LiveChat;user id=ksmykala1_ksmykala_admin;password=Grej,tasnie89;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
