--- a/LiveChat/LiveChat.App/Web.config
+++ b/LiveChat/LiveChat.App/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="LiveChatContext" connectionString="metadata=res://*/Models.LiveChatDataModel.csdl|res://*/Models.LiveChatDataModel.ssdl|res://*/Models.LiveChatDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql5.webio.pl,2401;initial catalog=ksmykala1_LiveChat;user id=ksmykala1_ksmykala_admin;password=Grej,tasnie89;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LiveChatContext" connectionString="metadata=res://*/Models.EntityClasses.LiveChatDataModel.csdl|res://*/Models.EntityClasses.LiveChatDataModel.ssdl|res://*/Models.EntityClasses.LiveChatDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql5.webio.pl,2401;initial catalog=ksmykala1_LiveChat;user id=ksmykala1_ksmykala_admin;password=Grej,tasnie89;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DefaultConnection" connectionString="Data Source=mssql5.webio.pl,2401;Database=ksmykala1_LiveChat;Uid=ksmykala1_ksmykala_admin;Password=Grej,tasnie89;" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-LiveChat.App-20141018160207;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-LiveChat.App-20141018160207.mdf" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
@@ -74,6 +74,18 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.2.0" newVersion="2.0.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.2.0" newVersion="2.0.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
