--- a/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
+++ b/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -51,67 +52,71 @@
     <Reference Include="WebMatrix.WebData, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
-    <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\Conversation.cs">
+    <Compile Include="Infrastructure\Abstract\Repository.cs" />
+    <Compile Include="Models\EntityClasses\AccountModels.cs" />
+    <Compile Include="Models\EntityClasses\Conversation.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\LiveChatDataModel.Context.cs">
+    <Compile Include="Models\EntityClasses\LiveChatDataModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>LiveChatDataModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\LiveChatDataModel.cs">
+    <Compile Include="Models\EntityClasses\LiveChatDataModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\LiveChatDataModel.Designer.cs">
+    <Compile Include="Models\EntityClasses\LiveChatDataModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>LiveChatDataModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Models\Message.cs">
+    <Compile Include="Models\EntityClasses\Message.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\UserProfile.cs">
+    <Compile Include="Models\EntityClasses\UserProfile.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\webpages_Membership.cs">
+    <Compile Include="Models\EntityClasses\webpages_Membership.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\webpages_OAuthMembership.cs">
+    <Compile Include="Models\EntityClasses\webpages_OAuthMembership.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\webpages_Roles.cs">
+    <Compile Include="Models\EntityClasses\webpages_Roles.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Infrastructure\Interfaces\IRepository.cs" />
+    <Compile Include="Infrastructure\Concrete\MessageRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <EntityDeploy Include="Models\LiveChatDataModel.edmx">
+    <EntityDeploy Include="Models\EntityClasses\LiveChatDataModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>LiveChatDataModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Models\LiveChatDataModel.Context.tt">
+    <None Include="Models\EntityClasses\LiveChatDataModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>LiveChatDataModel.edmx</DependentUpon>
       <LastGenOutput>LiveChatDataModel.Context.cs</LastGenOutput>
     </None>
-    <None Include="Models\LiveChatDataModel.edmx.diagram">
+    <None Include="Models\EntityClasses\LiveChatDataModel.edmx.diagram">
       <DependentUpon>LiveChatDataModel.edmx</DependentUpon>
     </None>
-    <None Include="Models\LiveChatDataModel.tt">
+    <None Include="Models\EntityClasses\LiveChatDataModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>LiveChatDataModel.edmx</DependentUpon>
       <LastGenOutput>LiveChatDataModel.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\EntityExtensions\" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
