--- a/LiveChat/LiveChat.App/LiveChat.App.csproj
+++ b/LiveChat/LiveChat.App/LiveChat.App.csproj
@@ -330,7 +330,7 @@
     <Content Include="Images\orderedList8.png" />
     <Content Include="Images\orderedList9.png" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
+    <Content Include="Views\Account\_ChangePassword.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
@@ -339,9 +339,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Account\_ChangeLoginPartial.cshtml" />
+    <Content Include="Views\Account\_ChangeLogin.cshtml" />
     <Content Include="Views\Chat\Shoutbox.cshtml" />
     <Content Include="Views\Account\ManageAccounts.cshtml" />
+    <Content Include="Views\Account\_RegisterNewUser.cshtml" />
+    <Content Include="Views\Shared\_Done.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
