--- a/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
+++ b/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Compile Include="Infrastructure\Repositories\UserRepository.cs" />
     <Compile Include="Infrastructure\Repositories\Repository.cs" />
-    <Compile Include="Models\EntityClasses\AccountModels.cs" />
+    <Compile Include="Models\EntityExtensions\AccountModels.cs" />
     <Compile Include="Models\EntityClasses\Conversation.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
@@ -88,6 +88,7 @@
     <Compile Include="Models\EntityClasses\webpages_Roles.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\EntityExtensions\ManageAccountsViewModel.cs" />
     <Compile Include="Models\EntityExtensions\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\Interfaces\IRepository.cs" />
