--- a/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
+++ b/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
@@ -52,6 +52,7 @@
     <Reference Include="WebMatrix.WebData, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\Repositories\RoleRepository.cs" />
     <Compile Include="Infrastructure\Repositories\UserRepository.cs" />
     <Compile Include="Infrastructure\Repositories\Repository.cs" />
     <Compile Include="Models\EntityExtensions\AccountModels.cs" />
@@ -89,7 +90,9 @@
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityExtensions\ManageAccountsViewModel.cs" />
+    <Compile Include="Models\EntityExtensions\RoleViewModel.cs" />
     <Compile Include="Models\EntityExtensions\User.cs" />
+    <Compile Include="Models\EntityExtensions\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\Interfaces\IRepository.cs" />
     <Compile Include="Infrastructure\Repositories\MessageRepository.cs" />
