--- a/LiveChat/LiveChat.App/LiveChat.App.csproj
+++ b/LiveChat/LiveChat.App/LiveChat.App.csproj
@@ -340,7 +340,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Account\_ChangeLogin.cshtml" />
+    <Content Include="Views\Account\_ChangeNickname.cshtml" />
     <Content Include="Views\Chat\Shoutbox.cshtml" />
     <Content Include="Views\Account\ManageAccounts.cshtml" />
     <Content Include="Views\Account\_RegisterNewUser.cshtml" />
