--- a/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
+++ b/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
@@ -89,10 +89,11 @@
     <Compile Include="Models\EntityClasses\webpages_Roles.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\EntityExtensions\EditUserViewModel.cs" />
     <Compile Include="Models\EntityExtensions\ManageAccountsViewModel.cs" />
     <Compile Include="Models\EntityExtensions\RoleViewModel.cs" />
     <Compile Include="Models\EntityExtensions\User.cs" />
-    <Compile Include="Models\EntityExtensions\UserViewModel.cs" />
+    <Compile Include="Models\EntityExtensions\EditUserAdminViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\Interfaces\IRepository.cs" />
     <Compile Include="Infrastructure\Repositories\MessageRepository.cs" />
