--- a/LiveChat/LiveChat.App/LiveChat.App.csproj
+++ b/LiveChat/LiveChat.App/LiveChat.App.csproj
@@ -311,6 +311,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
+    <Content Include="Scripts\live-chat\common.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\live-chat\roles.js" />
     <Content Include="Web.config" />
