--- a/LiveChat/LiveChat.App/LiveChat.App.csproj
+++ b/LiveChat/LiveChat.App/LiveChat.App.csproj
@@ -212,12 +212,12 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ChatController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\PrivateChatHub.cs" />
     <Compile Include="Hubs\ShoutboxHub.cs" />
+    <Compile Include="Hubs\UserHandlerHub.cs" />
     <Compile Include="Infrastructure\Ninject\NinjectControllerFactory.cs" />
     <Compile Include="Infrastructure\Ninject\SignalRNinjectDependencyResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -229,6 +229,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\LiveChat.css" />
+    <Content Include="Content\Login.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -312,6 +313,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\live-chat\common.js" />
+    <Content Include="Scripts\live-chat\user-handler.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\live-chat\roles.js" />
     <Content Include="Web.config" />
@@ -341,7 +343,6 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -350,7 +351,6 @@
     <Content Include="Views\Chat\Shoutbox.cshtml" />
     <Content Include="Views\Account\ManageAccounts.cshtml" />
     <Content Include="Views\Account\_RegisterNewUser.cshtml" />
-    <Content Include="Views\Shared\_Done.cshtml" />
     <Content Include="Views\Account\EditUser.cshtml" />
     <Content Include="Views\Account\_RemoveRole.cshtml" />
     <Content Include="Views\Account\_AddRole.cshtml" />
