--- a/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
+++ b/LiveChat/LiveChat.Domain/LiveChat.Domain.csproj
@@ -99,15 +99,14 @@
     <Compile Include="Models\EntityClasses\webpages_Roles.cs">
       <DependentUpon>LiveChatDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EntityExtensions\ChatUserViewModel.cs" />
+    <Compile Include="ViewModels\ChatUserViewModel.cs" />
     <Compile Include="Models\EntityExtensions\ConnectedUser.cs" />
-    <Compile Include="Models\EntityExtensions\EditUserViewModel.cs" />
-    <Compile Include="Models\EntityExtensions\LiveChatContextSingleton.cs" />
-    <Compile Include="Models\EntityExtensions\ManageAccountsViewModel.cs" />
-    <Compile Include="Models\EntityExtensions\PrivateChatViewModel.cs" />
-    <Compile Include="Models\EntityExtensions\RoleViewModel.cs" />
+    <Compile Include="ViewModels\EditUserViewModel.cs" />
+    <Compile Include="ViewModels\ManageAccountsViewModel.cs" />
+    <Compile Include="ViewModels\PrivateChatViewModel.cs" />
+    <Compile Include="ViewModels\RoleViewModel.cs" />
     <Compile Include="Models\EntityExtensions\User.cs" />
-    <Compile Include="Models\EntityExtensions\EditUserAdminViewModel.cs" />
+    <Compile Include="ViewModels\EditUserAdminViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\Interfaces\IRepository.cs" />
     <Compile Include="Infrastructure\Repositories\MessageRepository.cs" />
@@ -135,9 +134,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
