--- a/LiveChat/LiveChat.App/Web.config
+++ b/LiveChat/LiveChat.App/Web.config
@@ -37,6 +37,8 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <customErrors mode="On" defaultRedirect="~/Error/Index">
+    </customErrors>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
