--- a/LiveChat/LiveChat.App/Web.config
+++ b/LiveChat/LiveChat.App/Web.config
@@ -37,8 +37,9 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <!--<customErrors mode="On" defaultRedirect="~/Error/Index">
-    </customErrors>-->
+    <customErrors mode="On" defaultRedirect="~/Error/Index">
+      <error statusCode="403" redirect="~/Error/AccessDenied"/>
+    </customErrors>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
